# jira-monte-carlo

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DESIGN_SYSTEM.md  README.md  ROADMAP.md  check_health_section.py  check_react_data.py  debug_jira_api.py  debug_jira_completed.py  example_usage.py  package-lock.json  package.json  pyproject.toml  test-health-component.js  test-limited-items.py  test-table-rendering.js  test_responsive.py  test_responsive_design.py  tsconfig.json  turbo.json
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: template-validation.yml
.turbo/cache/: 0e626d97a11d7445-meta.json  0e626d97a11d7445.tar.zst  6bec4a40570daa54-meta.json  6bec4a40570daa54.tar.zst  fa74b862eb15c905-meta.json  fa74b862eb15c905.tar.zst
.turbo/daemon/: df424c0b50399aad-turbo.log.2025-08-01
apps/storybook/: STORYBOOK_STATUS.md  app.css  package.json  tailwind.config.ts
apps/storybook/.storybook/: main.ts  preview.tsx
apps/storybook/stories/: Introduction.tsx
apps/storybook/storybook-static/: index.json  project.json
apps/storybook/storybook-static/assets/: Button-g3Jj3_oP.js  Button.stories-BpP9Rgv9.js  Card-DGA8wUb9.js  Card.stories-DcFtFI2E.js  Chart.stories-D6spBbXi.js  Color-YHDXOIA2-DMNX_oXQ.js  DocsRenderer-CFRXHY34-TIK0qPGC.js  Input.stories-DE1OnPBA.js  Layout-ChYhyPwW.js  Layout.stories-_cEaJ7Ws.js  MetricCard-CHK9-UkR.js  MetricCard.stories-VzlSMyfA.js  Table-WJkD4t0p.js  (+8 more)
apps/web/: app.css  next.config.js  package.json  tailwind.config.ts
apps/web/.next/: prerender-manifest.json  routes-manifest.json  trace
data/: DM Project.xml  README.md  jira-sample.xml
docs/: ADDING_DATA_SOURCES.md  ARCHITECTURE.md  FIELD_REQUIREMENTS.md  HEURISTICS.md  INSTALLATION_TROUBLESHOOTING.md  JIRA_API_VELOCITY_ISSUE_SOLUTION.md  ML_HEURISTICS_GUIDE.md  ML_INTEGRATION_EXAMPLE.md  RESPONSIVE_DESIGN.md  SAAS_PROJECT_ROADMAP.md  SAAS_READINESS.md  UI_HEURISTICS.md  VELOCITY_VS_BACKLOG_REQUIREMENTS.md  presentation-layer-refactoring.md  storybook-roadmap.md
docs/architecture/: 0001-data-source-abstraction.md  0002-statistical-model-abstraction.md  0003-clean-architecture-refactoring.md  0004-velocity-change-predictions.md  0006-privacy-preserving-ml-heuristics.md  005-modern-design-system.md  006-plotly-animations.md  006-velocity-scenario-refactoring.md
docs/ux-patterns/: 001-chart-transition-smoothing.md  README.md
reports/: README.md  debug-full-report.json  debug-process-health-limited.json  debug-process-health.json  test-complete-data.json
scripts/: dual_jql_forecast.py  jira_velocity_workaround.py  validate_templates.py
src/application/: bootstrap.py  capability_analyzer.py  clean_style_service.py  csv_adapters.py  csv_analysis.py  csv_processing_factory.py  factories.py  forecasting_use_cases.py  import_data.py  ml_enhanced_use_cases.py  multi_project_import.py  multi_project_use_cases.py  plugin_registry.py  process_health_use_cases.py  style_service.py  style_service_factory.py  use_cases.py  velocity_prediction_use_cases.py
src/domain/: analysis.py  csv_processing.py  data_sources.py  entities.py  exceptions.py  forecasting.py  ml_decisions.py  ml_heuristics.py  multi_project.py  process_health.py  project_identity.py  reporting_capabilities.py  repositories.py  style_generation.py  styles.py  value_objects.py  velocity_adjustments.py
src/infrastructure/: cache.py  config.py  csv_analyzer.py  csv_parser.py  data_source_factory.py  forecasting_model_factory.py  jira_api_adapter.py  jira_api_data_source.py  jira_data_source.py  jira_rest_data_source.py  jira_xml_adapter.py  jira_xml_data_source.py  linear_data_source.py  monte_carlo_model.py  repositories.py  theme_repository.py  velocity_adjustment_parser.py
src/plugins/: __init__.py  example_plugin.py
src/presentation/: cli.py  cli_refactored.py  combined_report_generator.py  multi_report_generator.py  process_health_charts.py  react_report_generator.py  report_generator.py  scenario_report_generator.py  style_generator.py  template_validator.py  templates.py  templates_refactored.py
src/presentation/cli/: __init__.py  container.py
src/presentation/cli_new/: __init__.py  container.py
src/presentation/components/: __init__.py  base.py  chart.py  footer.py  header.py  metric_card.py  table.py
src/presentation/controllers/: __init__.py  base.py  forecast_controller.py  import_controller.py  report_controller.py
src/presentation/mappers/: __init__.py  chart_mapper.py  entity_mapper.py  presentation_mapper.py  request_response_mapper.py  view_model_mapper.py
src/presentation/models/: __init__.py  requests.py  responses.py  view_models.py
src/presentation/services/: __init__.py  template_service.py
src/presentation/utils/: responsive_charts.py
tests/: test_template_validator.py  test_velocity_scenario_integration.py
tests/integration/: .gitignore
tests/presentation/: test_react_report_generator.py
tests/unit/: test_capability_analyzer.py  test_combined_report_generator.py  test_csv_parser.py  test_csv_processing_factory.py  test_data_sources.py  test_entities.py  test_forecasting.py  test_ml_enhanced_sprint_health.py  test_ml_heuristics.py  test_multi_project.py  test_plugin_registry.py  test_process_health.py  test_process_health_charts.py  test_process_health_enhancements.py  test_project_identity.py  test_repositories.py  test_sprint_health_optimizer.py  test_styles.py  test_use_cases.py  test_velocity_adjustments.py
tests/unit/infrastructure/: test_cache.py  test_jira_api_data_source.py
(+50 files in other folders)
