[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sprint-radar"
version = "0.1.0"
description = "Sprint Radar - Agile project analytics and forecasting platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "polars>=0.20.0",
    "plotly>=5.13.0",
    "rich>=13.3.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-integration>=0.2.3",
    "pytest-benchmark>=4.0.0",
    "lxml>=4.9.0",
    "atlassian-python-api>=3.41.0",
    "python-dotenv>=1.0.0",
    "superclaude>=3.0.0.2",
]

[project.scripts]
sprint-radar = "src.presentation.cli:main"

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

# Custom pytest markers
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "template: marks tests that validate templates",
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
